--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "react-scroll": "^1.7.14",
     "styled-components": "^4.4.1"
   },
   "scripts": {
@@ -23,7 +24,9 @@
       "airbnb"
     ],
     "rules": {
-      "react/jsx-filename-extension": 0
+      "react/jsx-filename-extension": 0,
+      "jsx-a11y/anchor-is-valid": 0,
+      "quotes": 0
     }
   },
   "browserslist": {
